<resources>
    <string name="app_name">Breakfast App</string>
    <string name="greeting">Ready for Breakfast?</string>

    <string name="cancel">Cancel</string>
    <string name="subtotal_price">Subtotal: %s</string>
    <string name="bakery_cart_price">Bakery: %s</string>
    <string name="poultry_cart_price">Eggs: %s</string>
    <string name="brewery_cart_price">Drinks: %s</string>
    <string name="desserts_cart_price">Sweets: %s</string>
    <string name="cereal_cart_price">Cereal: %s</string>
    <string name="dairy_cart_price">Cereal: %s</string>
    <string name="smoothie_cart_price">Jar: %s</string>
    <string name="biscuit_cart_price">Cookies: %s</string>

    <string name="menu_prompt">Choose preferred meal</string>
    <string name="Bakery_prompt">Select your bread</string>
    <string name="poultry_prompt">Pick your eggs</string>
    <string name="brewery_prompt">Fancy a drink?</string>
    <string name="desserts_prompt">Some sweets to go?</string>
    <string name="location_prompt">Choose your Location</string>
    <string name="cereal_prompt">Pick your cereal</string>
    <string name="dairy_prompt">Some milk with it?</string>
    <string name="smoothie_prompt">A healthy choice!</string>
    <string name="biscuit_prompt">Your favorite cookies!</string>


    <string name="option_price">%s</string>

    <string name="order_summary">Order Summary</string>

    <string name="new_breakfast_order">New BreakFast Order</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="decrement_button_description">Decrease quantity by one</string>
    <string name="increment_button_description">Increase quantity by one</string>


    <string name="sample_text">Sourdough Bread</string>
    <string name="next_button">Proceed</string>


    <string name="fragment_bakery">Bakery</string>
    <string name="fragment_food_choice">Menu</string>
    <string name="fragment_desserts">Desserts</string>
    <string name="fragment_summary">Order Summary</string>
    <string name="fragment_pickup">Delivery Location</string>
    <string name="fragment_brewery">Beverages</string>
    <string name="fragment_poultry">Dairy Section</string>
    <string name="fragment_cereal">Cereals</string>
    <string name="fragment_dairy">Cereals</string>
    <string name="fragment_smoothie_shakes">Smoothies &amp; Shakes</string>
    <string name="fragment_biscuit">Cookies</string>

    <string name="send_email">Send Order!</string>
    <string name="order_summary_request">Can I have these please:</string>
    <string name="order_summary_address_text">Delivered to this address:</string>
    <string name="order_summary_phone_number">My phone number:</string>
    <string name="order_summary_thank_you">Thank you!</string>

    <string name="info_on_delivery_discount"> Delivery on OAU Campus is Free!</string>
    <string name="local_gov_hint">LGA</string>
    <string name="area_hint">Area</string>
    <string name="delivery_address_hint">Delivery Address</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="place_order">Place Order</string>
    <string name="change_address">Change</string>
    <string name="address">Address</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="order">Order</string>
    <string name="item_joiner_in_summary">x</string>

    <string name="cereals_desc">Crunchy Cereals</string>
    <string name="bakery_bites">Bakery bites</string>
    <string name="biscuit_banquet">Biscuit Banquet</string>
    <string name="juicy_smoothies_amp_shakes"><![CDATA[Juicy Smoothies & Shakes]]></string>
    <string name="chef_s_special_sunrise_surprise">Chef\'s Special Sunrise Surprise</string>
    <string name="omelette_obsessions">Omelette Obsessions</string>


    <string name="developer_signature">© 2023 Oladayo.rgb</string>


</resources>