<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FoodChoiceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16sp">

                <TextView
                    android:id="@+id/select_your_bread"
                    style="@style/Subtitle1"
                    android:layout_marginStart="8sp"
                    android:layout_marginVertical="16sp"
                    android:text="@string/menu_prompt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/menu_choices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="16sp"
                    app:layout_constraintTop_toBottomOf="@id/select_your_bread"
                    tools:layout_editor_absoluteX="16dp">

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/cereal_menu_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8sp"
                        card_view:cardCornerRadius="8sp"
                        card_view:cardElevation="4sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="8sp">

                            <TextView
                                android:id="@+id/menu_text_1"
                                style="@style/menu_text"
                                android:text="@string/cereals_desc"
                                card_view:drawableStartCompat="@drawable/crunchy_cereal" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/bakery_menu_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8sp"
                        card_view:cardCornerRadius="8sp"
                        card_view:cardElevation="4sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="8sp">

                            <TextView
                                android:id="@+id/menu_text_2"
                                style="@style/menu_text"
                                android:text="@string/bakery_bites"
                                card_view:drawableStartCompat="@drawable/bakery" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/omelette_menu_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8sp"
                        card_view:cardCornerRadius="8sp"
                        card_view:cardElevation="4sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="8sp">

                            <TextView
                                android:id="@+id/menu_text_3"
                                style="@style/menu_text"
                                android:text="@string/omelette_obsessions"
                                card_view:drawableStartCompat="@drawable/omelette" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/biscuit_menu_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8sp"
                        card_view:cardCornerRadius="8sp"
                        card_view:cardElevation="4sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="8sp">

                            <TextView
                                android:id="@+id/menu_text_4"
                                style="@style/menu_text"
                                android:text="@string/biscuit_banquet"
                                card_view:drawableStartCompat="@drawable/biscuit_banq" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/juice_menu_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8sp"
                        card_view:cardCornerRadius="8sp"
                        card_view:cardElevation="4sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="8sp">

                            <TextView
                                android:id="@+id/menu_text_5"
                                style="@style/menu_text"
                                android:text="@string/juicy_smoothies_amp_shakes"
                                card_view:drawableStartCompat="@drawable/protein_shakes" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/menu_option_special"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8sp"
                        card_view:cardCornerRadius="8sp"
                        card_view:cardElevation="4sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="8sp">

                            <TextView
                                android:id="@+id/menu_text_option_special"
                                style="@style/menu_text"
                                android:text="@string/chef_s_special_sunrise_surprise"
                                android:textColor="?colorPrimary"
                                card_view:drawableStartCompat="@drawable/ic_baseline_lunch_dining_24"
                                card_view:drawableTint="?colorPrimary" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>